bin_PROGRAMS = e_test_case

e_test_case_CPPFLAGS = \
-I. \
@E_TEST_CASE_CFLAGS@

e_test_case_LDADD = \
@E_TEST_CASE_LIBS@

e_test_case_SOURCES = \
e_test_case_main.c \
e_test_case_main.h \
e_test_case_util.c \
e_test_case_util.h \
0000_easy.c \
0001_introspect.c \
0002_deregister.c \
0100_basic.h \
0100_basic.c \
0101_basic_stack.c \
0110_transient_for.c \
0110_transient_for.h \
0111_transient_for_raise.c \
0112_transient_for_lower.c \
0113_transient_for_stack_above.c \
0114_transient_for_stack_below.c \
0120_notification_level.c

MAINTAINERCLEANFILES = \
Makefile.in
