bin_PROGRAMS = e_test_runner

e_test_runner_CPPFLAGS = \
-I. \
@E_TEST_RUNNER_CFLAGS@

e_test_runner_LDADD = \
@E_TEST_RUNNER_LIBS@

e_test_runner_SOURCES = \
e_test_runner.c \
e_test_runner.h \
0000_easy.c \
0100_base_operation.c \
0200_transient_for.c \
0300_notification.c

MAINTAINERCLEANFILES = \
Makefile.in
